Separate all features into feature modules

--- a/ui/src/app/core/header/header.component.html
+++ b/ui/src/app/core/header/header.component.html
@@ -14,10 +14,10 @@
     <div class="btn-group" *ngIf="!(isLoggedIn | async)">
       <a
         class="btn btn-outline-success btn-sm"
-        routerLink="/sign-in">Login</a>
+        routerLink="/auth/sign-in">Login</a>
       <a
         class="btn btn-outline-success btn-sm"
-        routerLink="/sign-up">Register</a>
+        routerLink="/auth/sign-up">Register</a>
     </div>
     <button
       class="btn btn-outline-success btn-sm"
