Add SSR feature

--- a/ui/src/app/categories/category-list/category-list.component.html
+++ b/ui/src/app/categories/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <div class="list-group">
   <a
-    *ngFor="let category of categories | async"
+    *ngFor="let category of categories"
     class="list-group-item"
     routerLink="/books"
     routerLinkActive="active"
