--- a/ui/src/app/auth/auth-form/auth-form.component.css
+++ b/ui/src/app/auth/auth-form/auth-form.component.css
@@ -1,7 +1,3 @@
-.ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948; /* green */
-}
-
-.ng-invalid:not(form):not(fieldset)  {
-  border-left: 5px solid #a94442; /* red */
+.mat-form-field {
+  width: 100%;
 }
