--- a/ui/src/app/books/books.component.html
+++ b/ui/src/app/books/books.component.html
@@ -1,8 +1,8 @@
-<div class="row">
-  <div class="col-md-4">
+<mat-drawer-container>
+  <mat-drawer mode="side" opened="true">
     <app-categories></app-categories>
-  </div>
-  <div class="col-md-8">
+  </mat-drawer>
+  <mat-drawer-content>
     <router-outlet></router-outlet>
-  </div>
-</div>
+  </mat-drawer-content>
+</mat-drawer-container>
