--- a/ui/src/app/categories/category-list/category-list.component.html
+++ b/ui/src/app/categories/category-list/category-list.component.html
@@ -1,10 +1,3 @@
-<div class="list-group">
-  <a
-    *ngFor="let category of categories"
-    class="list-group-item"
-    routerLink="/books"
-    routerLinkActive="active"
-    [queryParams]="{ categoryId: category.id }">
-    {{ category.title }}
-  </a>
-</div>
+<mat-list role="list">
+  <a mat-list-item *ngFor="let category of categories" routerLink="/books" routerLinkActive="active" [queryParams]="{ categoryId: category.id }">{{ category.title }}</a>
+</mat-list>
