--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body,
+html {
+  margin: 0;
+  font-family: Roboto, Arial, sans-serif;
+  min-height: 100vh;
+}
